# api-aula-py

./: docker-compose.yml  pyproject.toml
backend/: database.py  models.py
